--- a/ChrismasMovies.ipynb
+++ b/ChrismasMovies.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,11 +10,75 @@
     "\n",
     "app = Flask(__name__)\n",
     "\n",
+    "from flask import request\n",
+    "from flask import render_template, render_template_string\n",
+    "import os\n",
+    "from IPython.display import HTML\n",
+    "from jinja2 import Template\n",
+    "\n",
+    "h =\"\"\"{% if name %}\n",
+    "  <h1>Hello {{ name }}!</h1>\n",
+    "{% else %}\n",
+    "  <h1>Hello, World!</h1>\n",
+    "{% endif %}\"\"\"\n",
+    "t = Template(h)\n",
+    "HTML(t.render(name=\"John\"))\n",
     "\n",
     "@app.route('/')\n",
     "def hello():\n",
     "    return 'Hello, World!'"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      " * Serving Flask app \"__main__\" (lazy loading)\n",
+      " * Environment: production\n",
+      "   WARNING: This is a development server. Do not use it in a production deployment.\n",
+      "   Use a production WSGI server instead.\n",
+      " * Debug mode: off\n",
+      " * Running on http://127.0.0.1:2745/ (Press CTRL+C to quit)\n",
+      "127.0.0.1 - - [04/Jan/2021 15:21:28] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [04/Jan/2021 15:21:28] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n",
+      "127.0.0.1 - - [04/Jan/2021 15:31:31] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == '__main__':\n",
+    "    app.run(port=2745)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 2\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
