--- a/ChrismasMovies.ipynb
+++ b/ChrismasMovies.ipynb
@@ -2,18 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      " * Serving Flask app \"__main__\" (lazy loading)\n",
+      " * Environment: production\n",
+      "   WARNING: This is a development server. Do not use it in a production deployment.\n",
+      "   Use a production WSGI server instead.\n",
+      " * Debug mode: off\n",
+      " * Running on http://127.0.0.1:2745/ (Press CTRL+C to quit)\n",
+      "127.0.0.1 - - [14/Dec/2020 14:31:49] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [14/Dec/2020 14:31:50] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n"
+     ]
+    }
+   ],
    "source": [
     "from flask import Flask\n",
-    "\n",
     "app = Flask(__name__)\n",
     "\n",
-    "\n",
     "@app.route('/')\n",
-    "def hello():\n",
-    "    return 'Hello, World!'"
+    "def hello_world():\n",
+    "    return 'Hello, World!'\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    app.run(port=2745)"
    ]
   }
  ],
