--- a/newscrawler/clean.ipynb
+++ b/newscrawler/clean.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -57,70 +57,70 @@
        "  'Marié avant Noël',\n",
        "  'Le Noël de Mickey',\n",
        "  'Les 12 Chiens de Noël'],\n",
-       " 'Evaluation spectateur': ['8.2',\n",
-       "  '6.2',\n",
-       "  '4.6',\n",
-       "  '5.7',\n",
-       "  '4.9',\n",
-       "  '4.0',\n",
-       "  '5.2',\n",
-       "  '6.2',\n",
-       "  '6.0',\n",
-       "  '4.5',\n",
-       "  '5.1',\n",
-       "  '4.6',\n",
-       "  '4.9',\n",
-       "  '5.4',\n",
-       "  '4.7',\n",
-       "  '6.3',\n",
-       "  '5.7',\n",
-       "  '3.5',\n",
-       "  '5.7',\n",
-       "  '-',\n",
-       "  '4.6',\n",
-       "  '3.9',\n",
-       "  '4.2',\n",
-       "  '5.0',\n",
-       "  '-',\n",
-       "  '5.6',\n",
-       "  '5.4',\n",
-       "  '5.4',\n",
-       "  '7.5',\n",
-       "  '5.2'],\n",
+       " 'Evaluation spectateur': [8.2,\n",
+       "  6.2,\n",
+       "  4.6,\n",
+       "  5.7,\n",
+       "  4.9,\n",
+       "  4.0,\n",
+       "  5.2,\n",
+       "  6.2,\n",
+       "  6.0,\n",
+       "  4.5,\n",
+       "  5.1,\n",
+       "  4.6,\n",
+       "  4.9,\n",
+       "  5.4,\n",
+       "  4.7,\n",
+       "  6.3,\n",
+       "  5.7,\n",
+       "  3.5,\n",
+       "  5.7,\n",
+       "  0,\n",
+       "  4.6,\n",
+       "  3.9,\n",
+       "  4.2,\n",
+       "  5.0,\n",
+       "  0,\n",
+       "  5.6,\n",
+       "  5.4,\n",
+       "  5.4,\n",
+       "  7.5,\n",
+       "  5.2],\n",
        " 'image_urls': ['https://media.senscritique.com/media/000016162240/150/La_vie_est_belle.jpg',\n",
        "  'https://media.senscritique.com/media/000016127185/150/Christmas_Story.jpg',\n",
        "  'https://media.senscritique.com/media/000000080288/150/Tout_sauf_en_famille.jpg',\n",
        "  'https://media.senscritique.com/media/000018248554/150/Super_Noel.jpg',\n",
        "  'https://media.senscritique.com/media/000018252931/150/Hyper_Noel.jpg',\n",
-       "  'https://media.senscritique.com/media/000000095295/150/Voisin_contre_voisin.jpg',\n",
-       "  'https://media.senscritique.com/media/000017493323/150/Le_Grinch.jpg',\n",
-       "  'https://media.senscritique.com/media/000006328396/150/Richie_Rich_Meilleurs_Voeux.jpg',\n",
-       "  'https://media.senscritique.com/media/000007878081/150/Le_Pole_Express.jpg',\n",
-       "  'https://media.senscritique.com/media/000004203183/150/This_Christmas.jpg',\n",
-       "  'https://media.senscritique.com/media/000004022628/150/Maman_j_ai_rate_l_avion.jpg',\n",
-       "  'https://media.senscritique.com/media/000005882762/150/Les_12_Chiens_de_Noel.jpg',\n",
-       "  'https://media.senscritique.com/media/000019110917/150/A_la_maison_pour_Noel.jpg',\n",
-       "  'https://media.senscritique.com/media/000008428263/150/La_Fille_du_pere_Noel_2_Panique_a_Polaris.jpg',\n",
        "  'https://media.senscritique.com/media/000005109764/150/Esprit_de_famille.jpg',\n",
-       "  'https://media.senscritique.com/media/000000130799/150/Le_Sapin_a_les_boules.jpg',\n",
-       "  'https://media.senscritique.com/media/000004362031/150/Un_fiance_pour_Noel.jpg',\n",
+       "  'https://media.senscritique.com/media/000008428263/150/La_Fille_du_pere_Noel_2_Panique_a_Polaris.jpg',\n",
+       "  'https://media.senscritique.com/media/000006328396/150/Richie_Rich_Meilleurs_Voeux.jpg',\n",
+       "  'https://media.senscritique.com/media/000018279972/150/Marie_avant_Noel.jpg',\n",
+       "  'https://media.senscritique.com/media/000000153845/150/Un_Noel_de_folie.jpg',\n",
+       "  'https://media.senscritique.com/media/000017422684/150/Le_Noel_de_Mickey.jpg',\n",
        "  'https://media.senscritique.com/media/000005980281/150/Les_Amoureux_de_Noel.jpg',\n",
        "  'https://media.senscritique.com/media/000000151379/150/Le_Sapin_a_les_boules_2_Cousin_Eddie.jpg',\n",
-       "  'https://media.senscritique.com/media/000000162876/150/Elfe.jpg',\n",
-       "  'https://media.senscritique.com/media/000006981491/150/Famille_a_louer.jpg',\n",
-       "  'https://media.senscritique.com/media/000000153845/150/Un_Noel_de_folie.jpg',\n",
-       "  'https://media.senscritique.com/media/000008640816/150/Trois_Jours_avant_Noel.jpg',\n",
-       "  'https://media.senscritique.com/media/000006182927/150/Le_Drole_de_Noel_de_Scrooge.jpg',\n",
-       "  'https://media.senscritique.com/media/000000116149/150/Frere_Noel.jpg',\n",
-       "  'https://media.senscritique.com/media/000018279972/150/Marie_avant_Noel.jpg',\n",
-       "  'https://media.senscritique.com/media/000000010862/150/La_Fille_du_pere_Noel.jpg',\n",
-       "  'https://media.senscritique.com/media/000017422684/150/Le_Noel_de_Mickey.jpg',\n",
+       "  'https://media.senscritique.com/media/000005882762/150/Les_12_Chiens_de_Noel.jpg',\n",
+       "  'https://media.senscritique.com/media/000000179553/150/Super_Noel_mega_givre_Super_Noel_3.png',\n",
        "  'https://media.senscritique.com/media/000000025473/150/Maman_j_ai_encore_rate_l_avion.jpg',\n",
-       "  'https://media.senscritique.com/media/000000179553/150/Super_Noel_mega_givre_Super_Noel_3.png']}"
+       "  'https://media.senscritique.com/media/000000010862/150/La_Fille_du_pere_Noel.jpg',\n",
+       "  'https://media.senscritique.com/media/000007878081/150/Le_Pole_Express.jpg',\n",
+       "  'https://media.senscritique.com/media/000006182927/150/Le_Drole_de_Noel_de_Scrooge.jpg',\n",
+       "  'https://media.senscritique.com/media/000017493323/150/Le_Grinch.jpg',\n",
+       "  'https://media.senscritique.com/media/000004203183/150/This_Christmas.jpg',\n",
+       "  'https://media.senscritique.com/media/000004022628/150/Maman_j_ai_rate_l_avion.jpg',\n",
+       "  'https://media.senscritique.com/media/000000116149/150/Frere_Noel.jpg',\n",
+       "  'https://media.senscritique.com/media/000004362031/150/Un_fiance_pour_Noel.jpg',\n",
+       "  'https://media.senscritique.com/media/000000162876/150/Elfe.jpg',\n",
+       "  'https://media.senscritique.com/media/000000095295/150/Voisin_contre_voisin.jpg',\n",
+       "  'https://media.senscritique.com/media/000000130799/150/Le_Sapin_a_les_boules.jpg',\n",
+       "  'https://media.senscritique.com/media/000006981491/150/Famille_a_louer.jpg',\n",
+       "  'https://media.senscritique.com/media/000019110917/150/A_la_maison_pour_Noel.jpg',\n",
+       "  'https://media.senscritique.com/media/000008640816/150/Trois_Jours_avant_Noel.jpg']}"
       ]
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 17
     }
    ],
    "source": [
@@ -139,12 +139,19 @@
     "v[0].pop('images')\n",
     "v[0].pop('images_1')\n",
     "\n",
+    "\n",
+    "for i in range (len(v[0]['Evaluation spectateur'])):\n",
+    "    if v[0]['Evaluation spectateur'][i] != '-':\n",
+    "        v[0]['Evaluation spectateur'][i] = float(v[0]['Evaluation spectateur'][i])\n",
+    "    else :\n",
+    "        v[0]['Evaluation spectateur'][i] = 0\n",
+    "\n",
     "v[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -152,99 +159,99 @@
      "data": {
       "text/plain": [
        "[{'titre': 'La vie est belle',\n",
-       "  'Evaluation spectateur': '8.2',\n",
+       "  'Evaluation spectateur': 8.2,\n",
        "  'image_urls': 'https://media.senscritique.com/media/000016162240/150/La_vie_est_belle.jpg'},\n",
        " {'titre': 'Christmas Story',\n",
-       "  'Evaluation spectateur': '6.2',\n",
+       "  'Evaluation spectateur': 6.2,\n",
        "  'image_urls': 'https://media.senscritique.com/media/000016127185/150/Christmas_Story.jpg'},\n",
        " {'titre': 'Tout... sauf en famille',\n",
-       "  'Evaluation spectateur': '4.6',\n",
+       "  'Evaluation spectateur': 4.6,\n",
        "  'image_urls': 'https://media.senscritique.com/media/000000080288/150/Tout_sauf_en_famille.jpg'},\n",
        " {'titre': 'Super Noël',\n",
-       "  'Evaluation spectateur': '5.7',\n",
+       "  'Evaluation spectateur': 5.7,\n",
        "  'image_urls': 'https://media.senscritique.com/media/000018248554/150/Super_Noel.jpg'},\n",
        " {'titre': 'Hyper Noël',\n",
-       "  'Evaluation spectateur': '4.9',\n",
+       "  'Evaluation spectateur': 4.9,\n",
        "  'image_urls': 'https://media.senscritique.com/media/000018252931/150/Hyper_Noel.jpg'},\n",
        " {'titre': 'Super Noël méga givré (Super Noël 3)',\n",
-       "  'Evaluation spectateur': '4.0',\n",
-       "  'image_urls': 'https://media.senscritique.com/media/000000095295/150/Voisin_contre_voisin.jpg'},\n",
+       "  'Evaluation spectateur': 4.0,\n",
+       "  'image_urls': 'https://media.senscritique.com/media/000005109764/150/Esprit_de_famille.jpg'},\n",
        " {'titre': 'Le Grinch',\n",
-       "  'Evaluation spectateur': '5.2',\n",
-       "  'image_urls': 'https://media.senscritique.com/media/000017493323/150/Le_Grinch.jpg'},\n",
+       "  'Evaluation spectateur': 5.2,\n",
+       "  'image_urls': 'https://media.senscritique.com/media/000008428263/150/La_Fille_du_pere_Noel_2_Panique_a_Polaris.jpg'},\n",
        " {'titre': 'Le Drôle de Noël de Scrooge',\n",
-       "  'Evaluation spectateur': '6.2',\n",
+       "  'Evaluation spectateur': 6.2,\n",
        "  'image_urls': 'https://media.senscritique.com/media/000006328396/150/Richie_Rich_Meilleurs_Voeux.jpg'},\n",
        " {'titre': 'Le Pôle Express',\n",
-       "  'Evaluation spectateur': '6.0',\n",
-       "  'image_urls': 'https://media.senscritique.com/media/000007878081/150/Le_Pole_Express.jpg'},\n",
-       " {'titre': 'Voisin contre voisin',\n",
-       "  'Evaluation spectateur': '4.5',\n",
-       "  'image_urls': 'https://media.senscritique.com/media/000004203183/150/This_Christmas.jpg'},\n",
-       " {'titre': 'Esprit de famille',\n",
-       "  'Evaluation spectateur': '5.1',\n",
-       "  'image_urls': 'https://media.senscritique.com/media/000004022628/150/Maman_j_ai_rate_l_avion.jpg'},\n",
-       " {'titre': 'Famille à louer',\n",
-       "  'Evaluation spectateur': '4.6',\n",
-       "  'image_urls': 'https://media.senscritique.com/media/000005882762/150/Les_12_Chiens_de_Noel.jpg'},\n",
-       " {'titre': 'Un Noël de folie !',\n",
-       "  'Evaluation spectateur': '4.9',\n",
-       "  'image_urls': 'https://media.senscritique.com/media/000019110917/150/A_la_maison_pour_Noel.jpg'},\n",
-       " {'titre': 'Elfe',\n",
-       "  'Evaluation spectateur': '5.4',\n",
-       "  'image_urls': 'https://media.senscritique.com/media/000008428263/150/La_Fille_du_pere_Noel_2_Panique_a_Polaris.jpg'},\n",
-       " {'titre': 'Frère Noël',\n",
-       "  'Evaluation spectateur': '4.7',\n",
-       "  'image_urls': 'https://media.senscritique.com/media/000005109764/150/Esprit_de_famille.jpg'},\n",
-       " {'titre': \"Maman, j'ai raté l'avion !\",\n",
-       "  'Evaluation spectateur': '6.3',\n",
-       "  'image_urls': 'https://media.senscritique.com/media/000000130799/150/Le_Sapin_a_les_boules.jpg'},\n",
-       " {'titre': \"Maman, j'ai encore raté l'avion...\",\n",
-       "  'Evaluation spectateur': '5.7',\n",
-       "  'image_urls': 'https://media.senscritique.com/media/000004362031/150/Un_fiance_pour_Noel.jpg'},\n",
-       " {'titre': 'Richie Rich : Meilleurs Vœux',\n",
-       "  'Evaluation spectateur': '3.5',\n",
-       "  'image_urls': 'https://media.senscritique.com/media/000005980281/150/Les_Amoureux_de_Noel.jpg'},\n",
-       " {'titre': 'Le Sapin a les boules',\n",
-       "  'Evaluation spectateur': '5.7',\n",
-       "  'image_urls': 'https://media.senscritique.com/media/000000151379/150/Le_Sapin_a_les_boules_2_Cousin_Eddie.jpg'},\n",
-       " {'titre': 'Le Sapin a les boules 2 : Cousin Eddie',\n",
-       "  'Evaluation spectateur': '-',\n",
-       "  'image_urls': 'https://media.senscritique.com/media/000000162876/150/Elfe.jpg'},\n",
-       " {'titre': 'À la maison pour Noël',\n",
-       "  'Evaluation spectateur': '4.6',\n",
-       "  'image_urls': 'https://media.senscritique.com/media/000006981491/150/Famille_a_louer.jpg'},\n",
-       " {'titre': 'La Fille du père Noël',\n",
-       "  'Evaluation spectateur': '3.9',\n",
-       "  'image_urls': 'https://media.senscritique.com/media/000000153845/150/Un_Noel_de_folie.jpg'},\n",
-       " {'titre': 'La Fille du père Noël 2 : Panique à Polaris',\n",
-       "  'Evaluation spectateur': '4.2',\n",
-       "  'image_urls': 'https://media.senscritique.com/media/000008640816/150/Trois_Jours_avant_Noel.jpg'},\n",
-       " {'titre': 'Un fiancé pour Noël',\n",
-       "  'Evaluation spectateur': '5.0',\n",
-       "  'image_urls': 'https://media.senscritique.com/media/000006182927/150/Le_Drole_de_Noel_de_Scrooge.jpg'},\n",
-       " {'titre': 'Trois Jours avant Noël',\n",
-       "  'Evaluation spectateur': '-',\n",
-       "  'image_urls': 'https://media.senscritique.com/media/000000116149/150/Frere_Noel.jpg'},\n",
-       " {'titre': 'This Christmas',\n",
-       "  'Evaluation spectateur': '5.6',\n",
+       "  'Evaluation spectateur': 6.0,\n",
        "  'image_urls': 'https://media.senscritique.com/media/000018279972/150/Marie_avant_Noel.jpg'},\n",
-       " {'titre': 'Les Amoureux de Noël',\n",
-       "  'Evaluation spectateur': '5.4',\n",
-       "  'image_urls': 'https://media.senscritique.com/media/000000010862/150/La_Fille_du_pere_Noel.jpg'},\n",
-       " {'titre': 'Marié avant Noël',\n",
-       "  'Evaluation spectateur': '5.4',\n",
+       " {'titre': 'Voisin contre voisin',\n",
+       "  'Evaluation spectateur': 4.5,\n",
+       "  'image_urls': 'https://media.senscritique.com/media/000000153845/150/Un_Noel_de_folie.jpg'},\n",
+       " {'titre': 'Esprit de famille',\n",
+       "  'Evaluation spectateur': 5.1,\n",
        "  'image_urls': 'https://media.senscritique.com/media/000017422684/150/Le_Noel_de_Mickey.jpg'},\n",
-       " {'titre': 'Le Noël de Mickey',\n",
-       "  'Evaluation spectateur': '7.5',\n",
+       " {'titre': 'Famille à louer',\n",
+       "  'Evaluation spectateur': 4.6,\n",
+       "  'image_urls': 'https://media.senscritique.com/media/000005980281/150/Les_Amoureux_de_Noel.jpg'},\n",
+       " {'titre': 'Un Noël de folie !',\n",
+       "  'Evaluation spectateur': 4.9,\n",
+       "  'image_urls': 'https://media.senscritique.com/media/000000151379/150/Le_Sapin_a_les_boules_2_Cousin_Eddie.jpg'},\n",
+       " {'titre': 'Elfe',\n",
+       "  'Evaluation spectateur': 5.4,\n",
+       "  'image_urls': 'https://media.senscritique.com/media/000005882762/150/Les_12_Chiens_de_Noel.jpg'},\n",
+       " {'titre': 'Frère Noël',\n",
+       "  'Evaluation spectateur': 4.7,\n",
+       "  'image_urls': 'https://media.senscritique.com/media/000000179553/150/Super_Noel_mega_givre_Super_Noel_3.png'},\n",
+       " {'titre': \"Maman, j'ai raté l'avion !\",\n",
+       "  'Evaluation spectateur': 6.3,\n",
        "  'image_urls': 'https://media.senscritique.com/media/000000025473/150/Maman_j_ai_encore_rate_l_avion.jpg'},\n",
+       " {'titre': \"Maman, j'ai encore raté l'avion...\",\n",
+       "  'Evaluation spectateur': 5.7,\n",
+       "  'image_urls': 'https://media.senscritique.com/media/000000010862/150/La_Fille_du_pere_Noel.jpg'},\n",
+       " {'titre': 'Richie Rich : Meilleurs Vœux',\n",
+       "  'Evaluation spectateur': 3.5,\n",
+       "  'image_urls': 'https://media.senscritique.com/media/000007878081/150/Le_Pole_Express.jpg'},\n",
+       " {'titre': 'Le Sapin a les boules',\n",
+       "  'Evaluation spectateur': 5.7,\n",
+       "  'image_urls': 'https://media.senscritique.com/media/000006182927/150/Le_Drole_de_Noel_de_Scrooge.jpg'},\n",
+       " {'titre': 'Le Sapin a les boules 2 : Cousin Eddie',\n",
+       "  'Evaluation spectateur': 0,\n",
+       "  'image_urls': 'https://media.senscritique.com/media/000017493323/150/Le_Grinch.jpg'},\n",
+       " {'titre': 'À la maison pour Noël',\n",
+       "  'Evaluation spectateur': 4.6,\n",
+       "  'image_urls': 'https://media.senscritique.com/media/000004203183/150/This_Christmas.jpg'},\n",
+       " {'titre': 'La Fille du père Noël',\n",
+       "  'Evaluation spectateur': 3.9,\n",
+       "  'image_urls': 'https://media.senscritique.com/media/000004022628/150/Maman_j_ai_rate_l_avion.jpg'},\n",
+       " {'titre': 'La Fille du père Noël 2 : Panique à Polaris',\n",
+       "  'Evaluation spectateur': 4.2,\n",
+       "  'image_urls': 'https://media.senscritique.com/media/000000116149/150/Frere_Noel.jpg'},\n",
+       " {'titre': 'Un fiancé pour Noël',\n",
+       "  'Evaluation spectateur': 5.0,\n",
+       "  'image_urls': 'https://media.senscritique.com/media/000004362031/150/Un_fiance_pour_Noel.jpg'},\n",
+       " {'titre': 'Trois Jours avant Noël',\n",
+       "  'Evaluation spectateur': 0,\n",
+       "  'image_urls': 'https://media.senscritique.com/media/000000162876/150/Elfe.jpg'},\n",
+       " {'titre': 'This Christmas',\n",
+       "  'Evaluation spectateur': 5.6,\n",
+       "  'image_urls': 'https://media.senscritique.com/media/000000095295/150/Voisin_contre_voisin.jpg'},\n",
+       " {'titre': 'Les Amoureux de Noël',\n",
+       "  'Evaluation spectateur': 5.4,\n",
+       "  'image_urls': 'https://media.senscritique.com/media/000000130799/150/Le_Sapin_a_les_boules.jpg'},\n",
+       " {'titre': 'Marié avant Noël',\n",
+       "  'Evaluation spectateur': 5.4,\n",
+       "  'image_urls': 'https://media.senscritique.com/media/000006981491/150/Famille_a_louer.jpg'},\n",
+       " {'titre': 'Le Noël de Mickey',\n",
+       "  'Evaluation spectateur': 7.5,\n",
+       "  'image_urls': 'https://media.senscritique.com/media/000019110917/150/A_la_maison_pour_Noel.jpg'},\n",
        " {'titre': 'Les 12 Chiens de Noël',\n",
-       "  'Evaluation spectateur': '5.2',\n",
-       "  'image_urls': 'https://media.senscritique.com/media/000000179553/150/Super_Noel_mega_givre_Super_Noel_3.png'}]"
+       "  'Evaluation spectateur': 5.2,\n",
+       "  'image_urls': 'https://media.senscritique.com/media/000008640816/150/Trois_Jours_avant_Noel.jpg'}]"
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 18
     }
    ],
    "source": [
@@ -258,13 +265,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "out_file = open(\"dataF.json\", \"w\") \n",
+    "out_file = open(\"dataFin.json\", \"w\") \n",
     "json.dump(jsonformat, out_file, indent = 6)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
